final version. currently working

--- a/mean-field-equations/mean-field-equations.tex
+++ b/mean-field-equations/mean-field-equations.tex
@@ -113,7 +113,7 @@
 \title{\textbf{Equações de Campo Médio}}%\\ % Title
 % Focused and Deliciously Witty Subtitle} % Subtitle
 
-% \author{\textsc{Ford Prefect} % Author
+\author{\textsc{Ford Prefect} % Author
 % \\{\textit{Interstellar University}}} % Institution
 
 %  \date{\today} % Date
